# pathfinder2e_stats

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  HOW_TO_RELEASE  MANIFEST.in  README.md  lefthook.yml  pyproject.toml  run_self_contained.ps1  run_self_contained.sh  smoke_test.py
.github/workflows/: docs.yml  jupyterlite.yml  lint.yml  pytest.yml  wheels.yml
ci/: requirements-docs.yml  requirements-latest.yml  requirements-minimal.yml  requirements-upstream.yml
doc/: Makefile  api.rst  armory.rst  conf.py  develop.rst  getting_started.ipynb  index.rst  installing.rst  notebooks.rst  requirements-export.sh  requirements.yml  tables.rst  whats-new.rst
doc/notebooks/: index.rst
notebooks/: README.md  SF_fangblade.ipynb  SF_magnetar_rifle.ipynb  SF_punishing_salvo.ipynb  SIMPLE_NPC.ipynb  add_injury_to_insult.ipynb  barrows_edge.ipynb  bloodrager.ipynb  exacting_strike.ipynb  getting_started.ipynb  godbreaker.ipynb  tables.ipynb  xXx1337Sn1p3rxXx.ipynb
pathfinder2e_stats/: __init__.py  accessors.py  base.py  bonuses.py  check.py  config.py  damage.py  damage_spec.py  dice.py  tools.py  typing.py
pathfinder2e_stats/_tables/: __init__.py
pathfinder2e_stats/_tables/PC/: _common.py  class_proficiency.csv  class_proficiency.py  common.py  skill_proficiency.py  weapon_proficiency.csv  weapon_proficiency.py  weapon_specialization.csv
pathfinder2e_stats/_tables/SIMPLE_PC/: simple_pc.csv  simple_pc.py
pathfinder2e_stats/_tables/_PC/: ability_bonus.py  attack_item_bonus.csv  class_proficiency.csv  polymorph_attack.csv  rage.py  skill_proficiency.csv  spell_proficiency.csv  spell_proficiency.py  weapon_proficiency.csv  weapon_proficiency.py  weapon_specialization.csv
pathfinder2e_stats/armory/: __init__.py  _common.py  axes.py  bows.py  cantrips.py  class_features.py  critical_specialization.py  crossbows.py  darts.py  hammers.py  knives.py  picks.py  runes.py  solarian_crystals.py  spells.py  swords.py  upgrades.py
pathfinder2e_stats/armory/class_features/: __init__.py  operative.py  rogue.py  swashbuckler.py
pathfinder2e_stats/armory/pathfinder/: __init__.py  brawling.py  crossbow.py  dart.py  knife.py  melee.py  pick.py  ranged.py  shield.py  sword.py
pathfinder2e_stats/armory/starfinder/: __init__.py  axe.py  brawling.py  club.py  clubs.py  corrosive.py  crossbows.py  cryo.py  dart.py  darts.py  flail.py  flame.py  hammer.py  knife.py  knives.py  melee.py  plasma.py  polearm.py  ranged.py  shield.py  shock.py  snipers.py  sonic.py  spear.py  sword.py
pathfinder2e_stats/tables/: __init__.py  earn_income.csv
pathfinder2e_stats/tables/NPC/: AoE_damage_dice.csv  AoE_damage_mean.csv  HP.csv  abilities.csv  resistances.csv  skills.csv  spell_DC.csv  strike_damage_dice.csv  strike_damage_mean.csv
pathfinder2e_stats/tables/PC/: ability_bonus.csv  attack_item_bonus.csv  class_proficiency.csv  rage.csv  skill_proficiency.csv  spell_proficiency.csv  weapon_dice.csv  weapon_proficiency.csv  weapon_specialization.csv
pathfinder2e_stats/tables/_PC/: skill_proficiency.py  spell_proficiency.csv
pathfinder2e_stats/tests/: conftest.py  test_accessors.py  test_armory.py  test_base.py  test_bonuses.py  test_check.py  test_config.py  test_damage.py  test_damage_spec.py  test_dice.py  test_helloworld.py  test_tables.py  test_tools.py  test_typing.py
